# engine

./: .gitignore  .gitmodules  CMakeLists.txt
client_dll/: CMakeLists.txt  base_entity.h  client.cpp  client.h  events.cpp  events.h  game.cpp  game.h  imgui_netgraph.cpp  imgui_netgraph.h  input.cpp  input.h  mainmenu.cpp  mainmenu.h  stdafx.h
deferred_test/: CMakeLists.txt  main.cpp  stdafx.h
docs/: core entities.md  wire protocol.md
docs/filetypes/: engine model format.md  material.md  model.md  qc.md  shader.md
efs/: CMakeLists.txt  efs.cpp  efs_tool.cpp
elf/: CMakeLists.txt  elf.cpp  gui_objects.cpp  gui_objects.h  input.cpp  input.h  mapeditor.cpp  mapeditor.h  stdafx.h
elf_test/: CMakeLists.txt  main.cpp  stdafx.h
emf/: CMakeLists.txt
engineds/: CMakeLists.txt  main.cpp  stdafx.h
etfedit/: CMakeLists.txt  main.cpp  stdafx.h
game/: CMakeLists.txt  baseentity.cpp  baseentity.h  basethinker.h  camera.cpp  camera.h  console.cpp  console.h  devgui.cpp  devgui.h  entityfactory.h  entsearch.cpp  entsearch.h  entsys.cpp  entsys.h  event_handler.cpp  event_handler.h  framebuffer.cpp  framebuffer.h  glad.c  globals.h  icamera.h  igfx.cpp  igfx.h  input.cpp  input.h  keyvalues.h  light.h  light_base.h  light_global.cpp  light_global.h  light_point.cpp  main.cpp  material.cpp  material.h  memstat.cpp  memstat.h  networking.h  prop_common.h  prop_dynamic.cpp  (+17 more)
game/_old/: light.h  material.cpp  shader.cpp  shader_program.h  vector.cpp  vector.h
game/_old/glad/: glad.h
game/_old/gui/: imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_gl3.h
game/glad/: glad.h
game/shaders/: depth_map.qc  depth_map.vert  model_dynamic.frag  model_dynamic.qc  model_dynamic.vert  wireframe.frag  wireframe.qc
graphics/: CMakeLists.txt  camera.cpp  emf_loader.cpp  etf.cpp  framebuffer.cpp  gfx.cpp  material.cpp  pipeline.cpp  shader.cpp  shader_program.cpp  smd_loader.cpp  stdafx.h  texture.cpp  textures.cpp  window.cpp  window_register.cpp
graphics/glad/: glad.c  glad.h
graphics/gui/: imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_gl3.h
ifsys/: CMakeLists.txt  ifsys.cpp  stdafx.h
imgui/: CMakeLists.txt  imgui.cpp  imgui_draw.cpp  stdafx.h
launcher/: CMakeLists.txt  main.cpp  stdafx.h
logger/: CMakeLists.txt  main.cpp  stdafx.h
matedit/: CMakeLists.txt  main.cpp  stdafx.h  window_preview.cpp  window_preview.h  window_properties.cpp
mathlib/: CMakeLists.txt  stdafx.h  vector.cpp
mdlc/: CMakeLists.txt  emf_writer.cpp  emf_writer.h  main.cpp  stdafx.h
mdlc/test/: wolf.qc  wolf.smd  wolf_coll.smd
mdlviewer/: CMakeLists.txt  main.cpp  window_filedialog.cpp  window_filedialog.h  window_model.cpp  window_model.h  window_properties.cpp  window_properties.h
networking/: CMakeLists.txt  client.cpp  client_handlers.cpp  server.cpp  server_handlers.cpp  stdafx.h
phys/: CMakeLists.txt  aabb.cpp  bounding_sphere.cpp  collider.cpp  handle.cpp  mesh.cpp  object.cpp  plane.cpp  simulation.cpp  stdafx.h
phys_testbed/: CMakeLists.txt  main.cpp  stdafx.h
platlayer/: CMakeLists.txt  endian_win32.cpp  fileio_win32.cpp  stdafx.h
public/_old/: emf_loader.cpp  emf_loader.h  smd_parser.cpp  smd_parser.h
public/include/: adler32.h  arch.h  assert_opengl.h  assign_lambda.h  cmdbuf.h  cpuid.h  dl.h  emf.h  iclient.cpp  iclient.h  imgui_matrix.h  imodule.h  iserver.cpp  iserver.h  logger_client.h  logger_server.h  logger_shared.h  map.h  model.h  octree.h  parseutils.h  print.h  qc.h  qc_parser.h  ring_buffer.h  smd_parser.h  tree.h  watchdog.h
public/include/efs/: efs.h
public/include/elf/: elf.h  imapeditor.h
public/include/fs/: mmap.h
public/include/gfx/: camera.h  defs.h  emf_loader.h  etf.h  framebuffer.h  gfx.h  icamera.h  light.h  material.h  model.h  shader.h  shader_program.h  smd_loader.h  texture.h  textures.h  window.h  window_register.h
public/include/gfx/pipeline/: delivery.h  intake.h  intermediate.h  pipeline.h  stage.h
public/include/ifsys/: ifsys.h  imodule.h
public/include/magic/: README.txt  hexstrtoa.h  type_traits.h
public/include/math/: matrix.h  vector.h
public/include/net/: client.h  networking.h  server.h
public/include/phys/: aabb.h  bounding_sphere.h  collider.h  handle.h  mesh.h  object.h  phys.h  plane.h  simulation.h  vector.h
public/include/plat/: endian.h  fileio.h
public/include/schemas/: base_generated.h  edict_generated.h  emf_generated.h  entsys_generated.h  model_generated.h
public/src/: emf_loader.cpp  logger_client.cpp  logger_server.cpp  qc_parser.cpp  smd_parser.cpp  stdafx.h
schemas/: README.txt  base.fbs  build.sh  edict.fbs  emf.fbs  entsys.fbs  model.fbs
server_browser/: CMakeLists.txt  glad.c  renderer.cpp  renderer.h  server_browser.cpp  server_list.cpp  server_list.h  stdafx.h
server_dll/: CMakeLists.txt  base_entity.cpp  base_entity.h  base_player.cpp  base_player.h  base_thinker.h  entity_system.cpp  entity_system.h  entityfactory.h  fps_player.cpp  fps_player.h  globals.h  keyvalues.h  prop_common.h  prop_dynamic.cpp  prop_static.cpp  server.cpp  server.h  stdafx.cpp  stdafx.h
smd_parser/: CMakeLists.txt  README.txt  main.cpp  smd_parser.cpp  smd_parser.h  stdafx.h
